test/libsolidity/syntaxTests/types/bytes33.sol
contract C {
  bytes33 b33 = 1;
}
// ----
// DeclarationError: (15-22): Identifier not found or not unique.
